--- a/03_YSQL_Advanced_gitpod.ipynb
+++ b/03_YSQL_Advanced_gitpod.ipynb
@@ -32,20 +32,7 @@
    "source": [
     "!pip install ipython-sql\n",
     "!pip install psycopg2-binary\n",
-    "!pip install sqlalchemy "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Important!\n",
-    "> \n",
-    "> Restart the Notebook.\n",
-    "> \n",
-    "> Do NOT skip this step.\n",
-    "> \n",
-    "> After restarting the notebook, you can continue running notebook cells below, at **Create the notebook variables**.\n"
+    "!pip install sqlalchemy"
    ]
   },
   {
@@ -70,12 +57,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/markkim/Documents/YBU_repos/jupyter/YSQL/data /Users/markkim/Documents/YBU_repos/jupyter/YSQL/utils\n",
+      "Stored 'MY_DB_NAME' (str)\n",
+      "Stored 'MY_YB_PATH' (str)\n",
+      "Stored 'MY_GITPOD_WORKSPACE_URL' (NoneType)\n",
+      "Stored 'MY_HOST_IPv4_01' (str)\n",
+      "Stored 'MY_HOST_IPv4_02' (str)\n",
+      "Stored 'MY_HOST_IPv4_03' (str)\n",
+      "Stored 'MY_NOTEBOOK_DIR' (str)\n",
+      "Stored 'MY_TSERVER_WEBSERVER_PORT' (str)\n",
+      "Stored 'MY_NOTEBOOK_DATA_FOLDER' (str)\n",
+      "Stored 'MY_NOTEBOOK_UTILS_FOLDER' (str)\n",
+      "Stored 'MY_DATA3_DDL_FILE' (str)\n",
+      "Stored 'MY_DATA3_DML_FILE' (str)\n",
+      "Stored 'MY_UTIL_FUNCTIONS_FILE' (str)\n",
+      "Stored 'MY_UTIL_YBTSERVER_METRICS_FILE' (str)\n",
+      "Stored 'MY_SUDO' (NoneType)\n"
+     ]
+    }
+   ],
    "source": [
     "# Env variables for Notebook\n",
     "import os\n",
@@ -128,8 +138,7 @@
     "%store MY_DATA3_DDL_FILE\n",
     "%store MY_DATA3_DML_FILE\n",
     "%store MY_UTIL_FUNCTIONS_FILE\n",
-    "%store MY_UTIL_YBTSERVER_METRICS_FILE\n",
-    "%store MY_SUDO"
+    "%store MY_UTIL_YBTSERVER_METRICS_FILE"
    ]
   },
   {
@@ -145,13 +154,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bash: line 4: cd: /home/gitpod/yugabyte/: No such file or directory\n",
+      "bash: line 7: ./bin/ysqlsh: No such file or directory\n",
+      "bash: line 8: ./bin/ysqlsh: No such file or directory\n",
+      "bash: line 11: ./bin/ysqlsh: No such file or directory\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command 'b'YB_PATH=${1}\\nDB_NAME=${2}\\n\\ncd $YB_PATH\\n\\n# drop and create\\n./bin/ysqlsh -d yugabyte -c \"drop database if exists \"${DB_NAME}\";\"  \\n./bin/ysqlsh -d yugabyte -c \"create database \"${DB_NAME}\";\" \\n\\n# list dbs\\n./bin/ysqlsh -d yugabyte -c \"\\\\l\"\\n'' returned non-zero exit status 127.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[1;32m/Users/markkim/Documents/YBU_repos/jupyter/YSQL/03_YSQL_Advanced_gitpod.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/markkim/Documents/YBU_repos/jupyter/YSQL/03_YSQL_Advanced_gitpod.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m get_ipython()\u001b[39m.\u001b[39;49mrun_cell_magic(\u001b[39m'\u001b[39;49m\u001b[39mbash\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m-s \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m$MY_YB_PATH\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m$MY_DB_NAME\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m  # create database\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mYB_PATH=$\u001b[39;49m\u001b[39m{1}\u001b[39;49;00m\u001b[39m\\n\u001b[39;49;00m\u001b[39mDB_NAME=$\u001b[39;49m\u001b[39m{2}\u001b[39;49;00m\u001b[39m\\n\u001b[39;49;00m\u001b[39m\\n\u001b[39;49;00m\u001b[39mcd $YB_PATH\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m\\n\u001b[39;49;00m\u001b[39m# drop and create\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m./bin/ysqlsh -d yugabyte -c \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mdrop database if exists \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m$\u001b[39;49m\u001b[39m{DB_NAME}\u001b[39;49;00m\u001b[39m\"\u001b[39;49m\u001b[39m;\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m  \u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m./bin/ysqlsh -d yugabyte -c \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcreate database \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m$\u001b[39;49m\u001b[39m{DB_NAME}\u001b[39;49;00m\u001b[39m\"\u001b[39;49m\u001b[39m;\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m\\n\u001b[39;49;00m\u001b[39m# list dbs\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m./bin/ysqlsh -d yugabyte -c \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39ml\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.9.4/lib/python3.9/site-packages/IPython/core/interactiveshell.py:2358\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2356\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2357\u001b[0m     args \u001b[39m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2358\u001b[0m     result \u001b[39m=\u001b[39m fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   2359\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.9.4/lib/python3.9/site-packages/IPython/core/magics/script.py:153\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    152\u001b[0m     line \u001b[39m=\u001b[39m script\n\u001b[0;32m--> 153\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mshebang(line, cell)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.9.4/lib/python3.9/site-packages/IPython/core/magics/script.py:305\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    300\u001b[0m \u001b[39mif\u001b[39;00m args\u001b[39m.\u001b[39mraise_error \u001b[39mand\u001b[39;00m p\u001b[39m.\u001b[39mreturncode \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    301\u001b[0m     \u001b[39m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    302\u001b[0m     \u001b[39m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    303\u001b[0m     \u001b[39m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    304\u001b[0m     rc \u001b[39m=\u001b[39m p\u001b[39m.\u001b[39mreturncode \u001b[39mor\u001b[39;00m \u001b[39m-\u001b[39m\u001b[39m9\u001b[39m\n\u001b[0;32m--> 305\u001b[0m     \u001b[39mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'YB_PATH=${1}\\nDB_NAME=${2}\\n\\ncd $YB_PATH\\n\\n# drop and create\\n./bin/ysqlsh -d yugabyte -c \"drop database if exists \"${DB_NAME}\";\"  \\n./bin/ysqlsh -d yugabyte -c \"create database \"${DB_NAME}\";\" \\n\\n# list dbs\\n./bin/ysqlsh -d yugabyte -c \"\\\\l\"\\n'' returned non-zero exit status 127."
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # create database\n",
     "YB_PATH=${1}\n",
@@ -361,8 +395,67 @@
     "\n",
     "SELECT * FROM order_changes\n",
     "-- SELECT * FROM order_changes_2022_03 \n",
-    "--  SELECT * FROM order_changes_2022_02 \n",
-    "--  SELECT * FROM order_changes_default"
+    "-- SELECT * FROM order_changes_2022_02 \n",
+    "-- SELECT * FROM order_changes_default"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Indexed Relations\n",
+    "\n",
+    "By creating an index on the partitioned or parent table, a matching index is also created on any partitions that exist now or in the future. An index or unique constraint declared on a partitioned table is “virtual” in the same way that the partitioned table is: the actual data is in child indexes on the individual partition tables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "CREATE INDEX ON order_changes (change_date)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Partition Maintenance\n",
+    "\n",
+    "It is common to have a dynamic set of partitions that define a table. Partitions are frequently dropped and created to dispose of old information and add new info. \n",
+    "\n",
+    "Partitions simplify the removal of old data with the following command:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "DROP TABLE order_changes_2022_02;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, a partition can be removed from the partitioned table, but still retain access to the data. This is incase a report or aggregation of the data is necessary.\n",
+    "\n",
+    "This is done by detaching the partition from the partitioned table with the following statement:"
    ]
   },
   {
@@ -386,7 +479,7 @@
     "\n",
     "CREATE TABLE transactions (\n",
     "  user_id       INT NOT NULL,\n",
-    "  account_id\t    INT NOT NULL,\n",
+    "  account_id\t  INT NOT NULL,\n",
     "  geo_partition TEXT,\n",
     "  account_type  TEXT NOT NULL,\n",
     "  amount        NUMERIC NOT NULL,\n",
