add spaces to JSON tablespaces

--- a/03_YSQL_Advanced_gitpod.ipynb
+++ b/03_YSQL_Advanced_gitpod.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "!pip install ipython-sql\n",
-    "!pip install psycopg2-binary\n",
+    "!pip3 install psycopg2-binary==2.8.6\n",
     "!pip install sqlalchemy"
    ]
   },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -81,8 +81,7 @@
       "Stored 'MY_DATA3_DDL_FILE' (str)\n",
       "Stored 'MY_DATA3_DML_FILE' (str)\n",
       "Stored 'MY_UTIL_FUNCTIONS_FILE' (str)\n",
-      "Stored 'MY_UTIL_YBTSERVER_METRICS_FILE' (str)\n",
-      "Stored 'MY_SUDO' (NoneType)\n"
+      "Stored 'MY_UTIL_YBTSERVER_METRICS_FILE' (str)\n"
      ]
     }
    ],
@@ -122,9 +121,7 @@
     "MY_NOTEBOOK_DATA_FOLDER=MY_NOTEBOOK_DIR +'/data'\n",
     "MY_NOTEBOOK_UTILS_FOLDER=MY_NOTEBOOK_DIR + '/utils'\n",
     "\n",
-    "print(MY_NOTEBOOK_DATA_FOLDER, MY_NOTEBOOK_UTILS_FOLDER)\n",
     "# Store the note book values for other notebooks to use\n",
-    "\n",
     "%store MY_DB_NAME\n",
     "%store MY_YB_PATH\n",
     "%store MY_GITPOD_WORKSPACE_URL\n",
@@ -154,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -225,7 +222,7 @@
     "- Create tables with a DDL script\n",
     "- Load data with a DML script\n",
     "- Verify the creation of tables and data\n",
-    "- View the DDL for tbl_countries"
+    "- View the DDL for `order_changes`"
    ]
   },
   {
@@ -313,6 +310,28 @@
     "# ./bin/ysqlsh -d ${DB_NAME} -c \"\\d order_changes_2022_02\"\n",
     "# ./bin/ysqlsh -d ${DB_NAME} -c \"\\d order_changes_2022_03\"\n",
     "# ./bin/ysqlsh -d ${DB_NAME} -c \"\\d order_changes_default\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Set Autocommit\n",
+    "\n",
+    "Need to assign autocommit to true in order for DML transaction to occur without a transaction block error for the tablespace creation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%config SqlMagic.autocommit=True"
    ]
   },
   {
@@ -506,9 +525,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "CREATE TABLESPACE tblspace_us WITH (\n",
-    "  replica_placement='{\"num_replicas\": 1, \"placement_blocks\":\n",
-    "  [{\"cloud\":\"cloud1\",\"region\":\"region1\",\"zone\":\"zone1\",\"min_num_replicas\":1}]}'\n",
+    "CREATE TABLESPACE tblspace_us WITH (replica_placement='{\"num_replicas\": 1, \"placement_blocks\": [{\"cloud\": \"cloud1\", \"region\": \"region1\", \"zone\": \"zone1\", \"min_num_replicas\": 1}]}'\n",
     ")"
    ]
   },
@@ -524,9 +541,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "CREATE TABLESPACE  tblspace_eu WITH (\n",
-    "  replica_placement='{\"num_replicas\": 1, \"placement_blocks\":\n",
-    "  [{\"cloud\":\"cloud2\",\"region\":\"region2\",\"zone\":\"zone2\",\"min_num_replicas\":1}]}'\n",
+    "CREATE TABLESPACE  tblspace_eu WITH (replica_placement='{\"num_replicas\": 1, \"placement_blocks\": [{\"cloud\": \"cloud2\", \"region\": \"region2\", \"zone\": \"zone2\", \"min_num_replicas\": 1}]}'\n",
     ")"
    ]
   },
@@ -542,9 +557,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "CREATE TABLESPACE tblspace_ap WITH (\n",
-    "  replica_placement='{\"num_replicas\": 1, \"placement_blocks\":\n",
-    "  [{\"cloud\":\"cloud3\",\"region\":\"region3\",\"zone\":\"zone3\",\"min_num_replicas\":1}]}'\n",
+    "CREATE TABLESPACE tblspace_ap WITH (replica_placement='{\"num_replicas\": 1, \"placement_blocks\": [{\"cloud\": \"cloud3\", \"region\": \"region3\", \"zone\": \"zone3\", \"min_num_replicas\": 1}]}'\n",
     ")"
    ]
   },
