add copy to demo

--- a/03_YSQL_Advanced_gitpod.ipynb
+++ b/03_YSQL_Advanced_gitpod.ipynb
@@ -514,6 +514,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tablespaces are assigned repositories with assigned locations. In our example, each tablespace is assigned to a certain node in a particular cloud, region, and zone."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -585,7 +592,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create Table Partitions"
+    "#### Create Table Partitions\n",
+    "\n",
+    "The partitions will determine the which rows are included with the value from `geo_location`. Since the partitioned table has the Partition property by LIST, not RANGE, only rows that contain the LIST value will be assigned to a partition."
    ]
   },
   {
@@ -676,7 +685,7 @@
    "source": [
     "## Validate SQL operations\n",
     "\n",
-    "Review the rows to compare how the `geo_location` attribute determines the table partition."
+    "Review the rows to compare how the `geo_location` attribute determines the table partition. In this case, we set the location of the tablespace, then assigned a partition with a specific value for the `geo_location` attribute to determine which row will be assigned to the tablespace. This is geo row location."
    ]
   },
   {
