modify data for tablespaces

--- a/03_YSQL_Advanced_gitpod.ipynb
+++ b/03_YSQL_Advanced_gitpod.ipynb
@@ -205,7 +205,7 @@
     "editable": false
    },
    "source": [
-    "## Connect to YugabyteDB using the PostgreSQL Driver for Python\n",
+    "#### Connect to YugabyteDB using the PostgreSQL Driver for Python\n",
     "The following cells requires:\n",
     "- Python 3.8+ and psycopg2"
    ]
@@ -217,7 +217,7 @@
     "editable": false
    },
    "source": [
-    "### Create tables and loaded data using DDL and DML scripts\n",
+    "##### Create tables and loaded data using DDL and DML scripts\n",
     "In this section of the notebook, you will:\n",
     "- Create tables with a DDL script\n",
     "- Load data with a DML script\n",
@@ -685,7 +685,7 @@
    "source": [
     "## Validate SQL operations\n",
     "\n",
-    "Review the rows to compare how the `geo_location` attribute determines the table partition. In this case, we set the location of the tablespace, then assigned a partition with a specific value for the `geo_location` attribute to determine which row will be assigned to the tablespace. This is geo row location."
+    "Review the rows to compare how the `geo_location` attribute determines the table partition. In this case, we set the location of the tablespace, then assigned a partition with a specific value for the `geo_location` attribute to determine which row will be assigned to the tablespace. This is geo row partitioning."
    ]
   },
   {
@@ -707,8 +707,7 @@
     "-- SELECT tableoid::regclass, user_id, account_id, geo_partition FROM transactions\n",
     "-- SELECT tableoid::regclass, user_id, account_id, geo_partition  FROM transactions_us\n",
     "-- SELECT tableoid::regclass, user_id, account_id, geo_partition FROM transactions_eu\n",
-    "-- SELECT tableoid::regclass, user_id, account_id, geo_partition  FROM transactions_ap\n",
-    "\n"
+    "-- SELECT tableoid::regclass, user_id, account_id, geo_partition  FROM transactions_ap"
    ]
   },
   {
