--- a/02_YSQL_Intermediate_local.ipynb
+++ b/02_YSQL_Intermediate_local.ipynb
@@ -492,7 +492,7 @@
    "source": [
     "%%sql /* row counts */\n",
     "\n",
-    "update emp set sal=sal+100\n",
+    "update tbl_employees set sal=sal+100\n",
     "where job != 'MANAGER'\n",
     "returning ename,sal as new_salary;"
    ]
@@ -526,8 +526,8 @@
     "  manager.ename as \"manager ename\",\n",
     "  manager.sal as \"manager sal\"\n",
     "FROM\n",
-    "  emp employee\n",
-    "JOIN emp manager ON\n",
+    "  tbl_employees employee\n",
+    "JOIN tbl_employees manager ON\n",
     "  employee.mgr = manager.empno\n",
     "WHERE\n",
     "  manager.sal<employee.sal\n",
@@ -718,7 +718,7 @@
     "    lag(ename) over (per_dept_hiredate),\n",
     "    format('(1st hire in %L)',dname)\n",
     ") as \"last hire in dept\"\n",
-    "from emp join dept using(deptno)\n",
+    "from tbl_employees join tbl_departments using(deptno)\n",
     "window per_dept_hiredate\n",
     "  as (partition by dname order by hiredate)\n",
     "order by dname,hiredate;"
@@ -809,7 +809,7 @@
     "%%sql\n",
     "\n",
     "select job, dname, sum(sal)\n",
-    "from emp join dept using(deptno)\n",
+    "from tbl_employees join tbl_departments using(deptno)\n",
     "group by dname, job"
    ]
   },
@@ -875,7 +875,7 @@
    "source": [
     "%%sql \n",
     "\n",
-    "create index emp_skills on emp using gin((other_info->'skills'));"
+    "create index emp_skills on tbl_employees using gin((other_info->'skills'));"
    ]
   },
   {
@@ -899,7 +899,7 @@
    "source": [
     "%%sql \n",
     "\n",
-    "select * from emp where other_info->'skills' @> '\"SQL\"' ;"
+    "select * from tbl_employees where other_info->'skills' @> '\"SQL\"' ;"
    ]
   },
   {
@@ -923,7 +923,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "explain select * from emp where other_info->'skills' @> '\"SQL\"' ;"
+    "explain select * from tbl_employees where other_info->'skills' @> '\"SQL\"' ;"
    ]
   },
   {
@@ -954,7 +954,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "create index dept_description_text_search on dept using gin (( to_tsvector('simple',description) ));"
+    "create index dept_description_text_search on tbl_departments using gin (( to_tsvector('simple',description) ));"
    ]
   },
   {
@@ -978,7 +978,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "select * from dept where to_tsvector('simple',description) @@ to_tsquery('simple','responsible & services');"
+    "select * from tbl_departments where to_tsvector('simple',description) @@ to_tsquery('simple','responsible & services');"
    ]
   },
   {
@@ -1002,7 +1002,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "explain select * from dept where to_tsvector('simple',description) @@ to_tsquery('simple','responsible & services');"
+    "explain select * from tbl_departments where to_tsvector('simple',description) @@ to_tsquery('simple','responsible & services');"
    ]
   },
   {
@@ -1036,10 +1036,10 @@
     "\n",
     "create or replace procedure commission_transfer(empno1 int, empno2 int, amount int) as $$\n",
     "begin\n",
-    "update emp set comm=comm-commission_transfer.amount\n",
+    "update tbl_employees set comm=comm-commission_transfer.amount\n",
     "  where empno=commission_transfer.empno1 and comm>commission_transfer.amount;\n",
     "if not found then raise exception 'Cannot transfer % from %',amount,empno1; end if;\n",
-    "update emp set comm=comm+commission_transfer.amount\n",
+    "update tbl_employees set comm=comm+commission_transfer.amount\n",
     "  where emp.empno=commission_transfer.empno2;\n",
     "if not found then raise exception 'Cannot transfer from %',empno2; end if;\n",
     "end;\n",
@@ -1091,7 +1091,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT * from emp where comm is not null;"
+    "SELECT * from tbl_employees where comm is not null;"
    ]
   },
   {
@@ -1146,7 +1146,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "alter table dept add last_update timestamptz;"
+    "alter table tbl_departments add last_update timestamptz;"
    ]
   },
   {
@@ -1262,7 +1262,7 @@
     "sum(sal) sal_per_dept,\n",
     "count(*) num_of_employees,\n",
     "string_agg(distinct job,', ') distinct_jobs\n",
-    "from dept join emp using(deptno)\n",
+    "from tbl_departments join tbl_employees using(deptno)\n",
     "group by deptno,dname\n",
     "order by deptno;"
    ]
@@ -1337,7 +1337,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit ('3.9.4': pyenv)",
+   "display_name": "Python 3.7.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1351,12 +1351,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0857ffcb80af2fb548f76c195b67e2e5b75e102946b97bbf401092901016b64a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
