--- a/03_YSQL_Advanced_gitpod.ipynb
+++ b/03_YSQL_Advanced_gitpod.ipynb
@@ -740,7 +740,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit ('3.9.4': pyenv)",
+   "display_name": "Python 3.7.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -754,12 +754,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0857ffcb80af2fb548f76c195b67e2e5b75e102946b97bbf401092901016b64a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
